--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
-    "react-simple-typewriter": "^5.0.1"
+    "react-simple-typewriter": "^5.0.1",
+    "sentiment": "^5.0.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "@types/sentiment": "^5.0.4",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
