--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.3",
     "@next/font": "^14.2.15",
+    "lucide-react": "^0.474.0",
     "mongodb": "^6.13.0",
     "next": "15.1.6",
     "react": "^19.0.0",
