--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@next/font": "^14.2.15",
     "lucide-react": "^0.474.0",
     "mongodb": "^6.13.0",
+    "motion": "^12.4.0",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
